--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,9 +216,12 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 100vh;
-  background: url("../img/nasa.jpg") top center;
+  height: 80vh;
+  background: url("../img/nasa.jpg") 50% 18%;
   background-size: cover;
+  box-shadow: inset 100px 50px 50px 50px black;
+
+
 }
 
 #hero:before {
@@ -345,7 +348,7 @@ section {
 --------------------------------------------------------------*/
 #about{
   background-image: url("https://images.unsplash.com/photo-1520034475321-cbe63696469a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
-
+  box-shadow: inset 0px 10px 300px 100px black;
 }
 
 .about .content h3 {
@@ -410,8 +413,8 @@ section {
   /* top: 99999px; */
   top:-100px;
   transform-origin: 50% 100%;
-  animation: crawl 140s linear;
-  animation-iteration-count: infinite;
+  animation: crawl 80s infinite linear;
+  /* animation-iteration-count: infinite; */
 
 }
 p{
@@ -420,7 +423,7 @@ p{
 .crawl > .title {
   font-size: 90%;
   text-align: center;
-  animation-iteration-count: infinite;
+  /* animation-iteration-count: infinite; */
 
 
 }
@@ -428,7 +431,7 @@ p{
 .crawl > .title h1 {
   margin: 0 0 100px;
   text-transform: uppercase;
-  animation-iteration-count: infinite;
+  /* animation-iteration-count: infinite; */
 
 }
 
